--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 * {
-background-color: yellow;
+background-color: light purple;
 
 }
 
 h1 {
+font-style: normal;
+font-size: 20;
+font-family: sans-serif;
+font: Helvetica;
 
 }
