--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,20 @@
 * {
-background-color: purple;
+background-color: blue;
 
 }
 
 h1 {
 font-style: normal;
-font-size: 100;
+font-size: 200;
 font-family: sans-serif;
 font: Helvetica;
 
 }
 
 body {
-font: Times;
-font-size: 50
+font: Helvetica;
+font-size: 150
 font-family: sans-serif;
+font-style: oblique;
 
 }
