--- a/css/normalize.css
+++ b/css/normalize.css
@@ -610,6 +610,11 @@ ul,
 ol {
   margin-top: 0;
   margin-bottom: 10px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 20px;
 }
 ul ul,
 ol ul,
