--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,19 @@ font-style: normal;
 font-size: 200;
 font-family: sans-serif;
 font: Helvetica;
-
+margin-left: 50px;
+margin-right: 50px;
+margin-top: 30px;
+margin-down: 30px;
 }
 
 body {
 font: Helvetica;
-font-size: 150
+font-size: 150;
 font-family: sans-serif;
-font-style: oblique;
 background-color: yellow;
+}
+
+ul{
+margin-left: 50px;  
 }
