--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,25 @@
 * {
-background-color: yellow;
+background-color: #F5F6F2;
 
 }
 
 h1 {
 font-style: normal;
-font-size: 200;
-font-family: sans-serif;
-font: Helvetica;
-margin-left: 50px;
+font-size: 60px;
+font-family: "Condor", sans-serif;
+margin-left: 100px;
 margin-right: 50px;
-margin-top: 30px;
-margin-down: 30px;
+margin-top: 55px;
+margin-bottom: 40px;
+color: #4B5556;
 }
 
 body {
-font: Helvetica;
-font-size: 150;
-font-family: sans-serif;
-background-color: yellow;
+font-family: "Helvetica", sans-serif;
+font-size: 30px;
+color: #BDB6AA;
 }
 
 ul{
-margin-left: 50px;  
+margin-left: 108px;
 }
