--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,13 @@ background-color: #F5F6F2;
 
 h1 {
 font-style: normal;
-font-size: 60px;
+font-size: 50px;
 font-family: "Condor", sans-serif;
 margin-left: 100px;
 margin-right: 50px;
 margin-top: 55px;
 margin-bottom: 40px;
-color: #4B5556;
+color: #6E7376;
 }
 
 body {
