--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -1,7 +1,14 @@
 * {
-
+background-color: #F5F6F2;
 }
 
 h1 {
-
+font-style: normal;
+font-size: 50px;
+font-family: "Condor", sans-serif;
+margin-left: 100px;
+margin-right: 50px;
+margin-top: 55px;
+margin-bottom: 40px;
+color: #6E7376;
 }
