--- a/code-exercises/css/style.css
+++ b/code-exercises/css/style.css
@@ -18,7 +18,7 @@ h2 {
   font-style:normal;
   text-align:center;
   position:relative; 
-  top: 325px;
+  top: 40%;
   font-size: 60px;
   font-family: "Condor", sans-serif;
   color: whitesmoke;
@@ -38,6 +38,18 @@ p {
   color: #999348;
   margin-left: 100px;
   margin-bottom: 10px;
+}
+
+.media-query {
+  font-family: 'Nunito', sans-serif;
+  color: #34273B;
+  font-size:50px;
+  font-weight: 400px;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  top: 200px;
+  position: relative;
 }
 
 button {
@@ -64,4 +76,23 @@ button {
   height:600px;
   margin: 0 auto;
   width:100%;
+}
+
+/*---Media Queries---*/
+@media screen and (max-width: 1440px) { 
+  .media-query { 
+    color:indigo;
+  }
+}
+
+@media screen and (max-width: 1000px) { 
+  .media-query { 
+    color: turquoise;
+  }
+}
+
+@media screen and (max-width: 500px) { 
+  .media-query { 
+    color: maroon;
+  }
 }
