--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -2,7 +2,7 @@ body {
     background-color: white;
 }
 
-.bg-for-slideshow {
+.bg-for-content {
     background-color: #E6E5E3;
     width: 460px;
     height: auto;
