--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -153,10 +153,10 @@ background-image: url(../img/5.jpg);
 
 .carousel-indicators {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 50px;
+    padding: 50px;
     position: absolute;
-bottom:2%;
+    bottom:2%;
     left: 0;
     right: 0;
     text-align: center;
