--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -64,20 +64,25 @@ a:focus {
 
 .bg-for-content {
     background-color: #FFFCF7;
-    width: 100%;
+    width:100%;
 }
 
 /* Carousel CSS */
 
 .carousel {
+    width: 100%;
+    height: 0;
+    padding-bottom: 50%;
+    margin-bottom: 30px;
     position: relative;
+    overflow: hidden;
 }
 
 .carousel-inner {
-    position: relative;
-    overflow: hidden;
     width: 100%;
-    height:auto;
+    height: 0;
+    padding-bottom: 60%; 
+    margin-top: 40px;
 }
 
 .carousel-open:checked + .carousel-item {
@@ -87,9 +92,9 @@ a:focus {
 
 .image-1 { 
 background-image: url(../img/Carousel1_Cafe.jpg);
-  background-size: cover; 
+  background-size: contain; 
   background-repeat: no-repeat;
- background-position: center center;
+ background-position: 0px 0px;
 }
 
 .image-2 { 
@@ -170,7 +175,7 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     margin: 0;
     padding: 0;
     position: absolute;
-bottom:2%;
+    bottom:10%;
     left: 0;
     right: 0;
     text-align: center;
@@ -224,23 +229,60 @@ bottom:2%;
     color: #A8977C;
     text-align: center;
     opacity: 100%;
-    width: 48.26%;
-    height: 175px;
+    width: 70%;
+    margin: auto;
+    padding-bottom: 30px;
+}
+
+#specials{
+    font-family: "Unna-Bold", sans-serif;
+    font-size: 30px;
+    color: #A5977F;
+    letter-spacing: 0;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 15px;
     margin: auto;
 }
+
+.special-content{
+    width: 80%;
+    height: auto;
+    margin: auto;
+}
+
+.size{
+    font-family: Roboto-Medium;
+    font-size: 16px;
+    color: #8D8D8D;
+    letter-spacing: 5px;
+    padding-bottom: 20px;   
+}
+
+.items{
+    font-family: Roboto-Medium;
+    font-size: 16px;
+    color: #676767;
+    letter-spacing: 0;
+}
+
+.details{
+    font-family: Roboto-Regular;
+    font-size: 16px;
+    color: #676767;
+    letter-spacing: 0;
+    padding-bottom: 5px;
+}
+
+.pricing{
+    font-family: Roboto-Regular;
+    font-size: 16px;
+    color: #676767;
+    letter-spacing: 0;
+    padding-bottom: 20px;
+}
+
+p {
+    margin:0;
     
-h1{
-
-}
-
-p1{
-
-}
-
-h2{
-
-}
-
-p2{
-
 }
