--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -72,8 +72,8 @@ a:focus {
 .carousel {
     width: 100%;
     height: 0;
-    padding-bottom: 50%;
-    margin-bottom: 30px;
+    padding-bottom: 70%;
+    margin: auto;
     position: relative;
     overflow: hidden;
 }
@@ -81,8 +81,8 @@ a:focus {
 .carousel-inner {
     width: 100%;
     height: 0;
-    padding-bottom: 60%; 
-    margin-top: 40px;
+    padding-bottom: 70%; 
+    padding-top: 40px; 
 }
 
 .carousel-open:checked + .carousel-item {
@@ -91,38 +91,38 @@ a:focus {
 }
 
 .image-1 { 
-background-image: url(../img/Carousel1_Cafe.jpg);
-  background-size: contain; 
+  background-image: url(../img/Carousel1_Cafe.jpg);
+  background-size: 100%; 
   background-repeat: no-repeat;
- background-position: 0px 0px;
+  background-position:0 0; 
 }
 
 .image-2 { 
-background-image: url(../img/Carousel2_Coffee.jpg);
-  background-size: cover; 
+  background-image: url(../img/Carousel2_Coffee.jpg);
+  background-size: 100%; 
   background-repeat: no-repeat;
- background-position: center center;
+  background-position:0 0; 
 }
 
 .image-3 { 
 background-image: url(../img/Carousel3_Cafe.jpg);
-  background-size: cover; 
+  background-size: 100%; 
   background-repeat: no-repeat;
- background-position: center center;
+  background-position:0 0; 
 }
 
 .image-4 { 
     background-image: url(../img/Carousel4_ColdDrinks.jpg);
-    background-size: cover; 
+    background-size: 100%; 
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position:0 0; 
     }
 
 .image-5 { 
     background-image: url(../img/Carousel5_Food.jpg);
-    background-size: cover; 
+    background-size: 100%; 
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position:0 0; 
     }
 
 .carousel-item {
@@ -138,7 +138,7 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     color: #fff;
     cursor: pointer;
     display: none;
-    font-size: 150px;
+    font-size: 100px;
     position: absolute;
     top: 50%;
     -webkit-transform: translate(0, -50%);
@@ -151,11 +151,11 @@ background-image: url(../img/Carousel3_Cafe.jpg);
 }
 
 .carousel-control.prev {
-    left: 10%;
+    left: 15%;
 }
 
 .carousel-control.next {
-    right: 12%;
+    right: 15%;
 }
 
 .carousel-control:hover {
@@ -231,6 +231,7 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     opacity: 100%;
     width: 70%;
     margin: auto;
+    padding-top: 30px; 
     padding-bottom: 30px;
 }
 
@@ -252,6 +253,10 @@ background-image: url(../img/Carousel3_Cafe.jpg);
 }
 
 .size{
+    width: 100%;
+    height: auto;
+}
+p1 {
     font-family: Roboto-Medium;
     font-size: 16px;
     color: #8D8D8D;
@@ -259,14 +264,15 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     padding-bottom: 20px;   
 }
 
-.items{
+p2{
     font-family: Roboto-Medium;
     font-size: 16px;
     color: #676767;
     letter-spacing: 0;
+    padding-bottom: 10px; 
 }
 
-.details{
+p3{
     font-family: Roboto-Regular;
     font-size: 16px;
     color: #676767;
@@ -274,15 +280,7 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     padding-bottom: 5px;
 }
 
-.pricing{
-    font-family: Roboto-Regular;
-    font-size: 16px;
-    color: #676767;
-    letter-spacing: 0;
-    padding-bottom: 20px;
-}
-
 p {
-    margin:0;
+    margin:5;
     
 }
