--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -1,7 +1,7 @@
 html {
     background-color: white;
     font-size: 16px;
-    font-family: 'Roboto', sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 body{
@@ -14,62 +14,129 @@ a:focus {
     letter-spacing:0.58px;
 }
 
-a: hover{
+a:hover{
     decoration: none;
-    color: #black;
+    color: black;
 }
+
+/* Logo */
+
+@media (min-width: 801px) {
+    #top img {
+        width:128px;
+        height:48px;
+        margin-top:40px;
+        margin-bottom:50px;
+    }
+
+    #logo-link {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media (max-width: 800px) {
+    #top img {
+        width:128px;
+        height:48px;
+        margin-left:27px;
+        margin-top:40px;
+        margin-bottom:50px;
+        float:left;
+    }
+}
+
+/* Navigation Bar */
 
 .navi {
     overflow: hidden;
     position: relative;
 }
 
-.navi #myLinks {
-    display: none;
-  }
+@media (min-width: 801px) {
+    .bars {
+        display: none;
+    }
 
-.navi #links {
-    width: 100%;
+    #links {
+        display: block;
+        width: 100%;
+        background-color: #FFFCF7;
+        padding-top: 10px;
+    }
+
+    #links-inner {
+        width: 85%;
+        margin: 0 auto;
+    }
+
+    .navi-links-hidden, .navi-link {
+        display: block;
+        float: left;
+    }
+
+    .navi-link {
+        display: block;
+        width: 14.2%;
+        text-align: center;
+        text-decoration: none;
+    }
 }
 
-.nav > li > a:hover,
-.nav > li > a:focus {
-  text-decoration: none;
-  background-color: #eee;
+.navi-links-display {
+    display: block;
 }
 
-.navi-link {
-  background: #EEECE9;
-  box-shadow: inset 0 0 4px 2px rgba(165,151,127,0.24);
-  font-family:'Unna-Bold', serif;
-  color: #A8977C;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-  text-align: center;
-  padding: 2px;
+@media (max-width: 800px) {
+    .navi #links {
+        width: 100%;
+    }
+
+    .navi-links-hidden {
+        display: none;
+    }
+    
+    .nav > li > a:hover,
+    .nav > li > a:focus {
+      text-decoration: none;
+      background-color: #eee;
+    }
+    
+    .navi-link {
+      background: #EEECE9;
+      box-shadow: inset 0 0 4px 2px rgba(165,151,127,0.24);
+      font-family:'Unna-Bold', serif;
+      color: #A8977C;
+      text-decoration: none;
+      font-size: 17px;
+      display: block;
+      text-align: center;
+      padding: 2px;
+    }
+    
+    .navi a.icon {
+      display: block;
+      position: absolute;
+      right: 28px;
+      top: 53px;
+      font-size: 30px;
+      color: black;
+      text-decoration: none;
+    }
+    
+    .navi a.icon:hover,
+    .navi a.icon:focus {
+        text-decoration: none;
+    }
+    
+    .navi-link:hover {
+      background-color: #A8977C;
+      color: white;
+      text-decoration: none;
+    }
 }
 
-.navi a.icon {
-  display: block;
-  position: absolute;
-  right: 28px;
-  top: 53px;
-  font-size: 30px;
-  color: black;
-  text-decoration: none;
-}
-
-.navi a.icon:hover,
-.navi a.icon:focus {
-    text-decoration: none;
-}
-
-.navi-link:hover {
-  background-color: #A8977C;
-  color: white;
-  text-decoration: none;
-}
 
 .bg-for-content {
     background-color: #FFFCF7;
@@ -81,8 +148,7 @@ a: hover{
 
 .carousel {
     width: 80%;
-    height: 0;
-    padding-bottom: 70%;
+    /*padding-bottom: 70%; */
     margin: auto;
     position: relative;
     overflow: hidden;
@@ -90,9 +156,21 @@ a: hover{
 
 .carousel-inner {
     width: 100%;
-    height: 0;
-    padding-bottom: 70%; 
-    padding-top: 40px; 
+    height: 100%;
+    /*padding-bottom: 70%; */
+    margin-top: 40px;
+}
+
+@media (min-width: 801px) {
+    .carousel-inner {
+        height: 800px;
+    }
+}
+
+@media (max-width: 800px) {
+    .carousel-inner {
+        min-height: 200px;
+    }
 }
 
 .carousel-open:checked + .carousel-item {
@@ -100,45 +178,64 @@ a: hover{
     opacity: 100;
 }
 
-.image-1 { 
-  background-image: url(../img/Carousel1_Cafe.jpg);
-  background-size: 100%; 
-  background-repeat: no-repeat;
-  background-position:0 0; 
+@media (min-width: 801px) {
+    .carousel-item {
+        text-align: center;
+    }
+    .carousel-item img {
+        max-height: 800px;
+    }
 }
 
-.image-2 { 
-  background-image: url(../img/Carousel2_Coffee.jpg);
-  background-size: 100%; 
-  background-repeat: no-repeat;
-  background-position:0 0; 
-}
-
-.image-3 { 
-background-image: url(../img/Carousel3_Cafe.jpg);
-  background-size: 100%; 
-  background-repeat: no-repeat;
-  background-position:0 0; 
-}
-
-.image-4 { 
-    background-image: url(../img/Carousel4_ColdDrinks.jpg);
-    background-size: 100%; 
-    background-repeat: no-repeat;
-    background-position:0 0; 
+@media (max-width: 800px) {
+    .carousel-item {
+        height: 200px;
     }
 
-.image-5 { 
-    background-image: url(../img/Carousel5_Food.jpg);
-    background-size: 100%; 
-    background-repeat: no-repeat;
-    background-position:0 0; 
+    .carousel-item img {
+        height: 0px;
     }
+
+    .image-1 { 
+        background-image: url(../img/Carousel1_Cafe.jpg);
+        background-size: 100%; 
+        background-repeat: no-repeat;
+        background-position:0 0; 
+    }
+
+    .image-2 { 
+        background-image: url(../img/Carousel2_Coffee.jpg);
+        background-size: 100%; 
+        background-repeat: no-repeat;
+        background-position:0 0; 
+    }
+
+    .image-3 { 
+        background-image: url(../img/Carousel3_Cafe.jpg);
+        background-size: 100%; 
+        background-repeat: no-repeat;
+        background-position:0 0; 
+    }
+
+    .image-4 { 
+        background-image: url(../img/Carousel4_ColdDrinks.jpg);
+        background-size: 100%; 
+        background-repeat: no-repeat;
+        background-position:0 0; 
+    }
+
+    .image-5 { 
+        background-image: url(../img/Carousel5_Food.jpg);
+        background-size: 100%; 
+        background-repeat: no-repeat;
+        background-position:0 0; 
+    }
+}
+
 
 .carousel-item {
     position: absolute;
     width: 100%;
-    height: 500px;
     opacity: 0;
     margin: auto;
 }
@@ -243,6 +340,7 @@ background-image: url(../img/Carousel3_Cafe.jpg);
     margin: auto;
     padding-top: 30px; 
     padding-bottom: 30px;
+    max-width: 500px;
 }
 
 h{
@@ -262,7 +360,8 @@ h{
     margin: auto;
 }
 
-.rows{
+.rows {
+    float: left;
     width: 100%;
     height: auto;
     margin-bottom: 20px;
@@ -285,10 +384,40 @@ li,ul{
     padding: 0;
 }
 
+section {
+    width: 100%;
+}
+
+/* Drinks */
+
+@media (min-width: 801px) {
+    .beverages-content {
+        width: 70%;
+    }
+}
+
 .drink-frame{
     margin-top: 0px;
     margin-bottom: 20px;
-    
+    float: left;
+}
+
+@media (min-width: 801px) {
+    .drink-frame-left {
+        max-width: 48%;
+        margin-right: 4%;
+    }
+    .drink-frame-right {
+        max-width: 48%;
+    }
+}
+
+.drink-frame-caption {
+    float: left;
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .drink-item-row p{
@@ -381,6 +510,51 @@ p4{
     padding-bottom: 20px;
 }
 
+/* Food */
+
+@media (min-width: 801px) {
+    .content-food {
+        width: 70%;
+    }
+
+    .items  {
+        margin-bottom: 5px;
+        width: 20%;
+        margin-right: 8%;
+        float: left;
+        font-weight: bold;
+    }
+    
+    .details {
+        margin-bottom: 5px;
+        width: 59%;
+        margin-right: 5%;
+        float: left;
+    }
+    
+    .pricing {
+        margin-bottom: 5px;
+        width: 8%;
+        float: left;
+        text-align: right;
+    }
+}
+
+@media (max-width: 800px) {
+    .items {
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
+
+    .details, .pricing  {
+        margin-bottom: 5px;
+    }
+
+    .pricing {
+        text-align: left;
+    }
+}
+
 .pricing{
     font-family: Roboto-Regular;
     font-size: 16px;
@@ -405,6 +579,7 @@ p4{
     color: #676767;
     text-align: right;
     padding-bottom: 20px; 
+    font-weight: bold;
 }
 
 #specials,#beverages, #food, #visit-us, #contact-us, #follow-us, #reviews{
@@ -425,12 +600,118 @@ p4{
     float: left;
 }
 
-.items, .details, .pricing {
-    margin-bottom: 5px;
-}
-
 .pricing-center li {
     text-align: center;
+}
+
+/* Specials */
+
+@media (min-width: 801px) {
+    .specials-content {
+        width: 70%;
+    }
+
+    .specials-items  {
+        margin-bottom: 5px;
+        width: 30%;
+        margin-right: 8%;
+        float: left;
+        font-weight: bold;
+    }
+    
+    .specials-details {
+        margin-bottom: 5px;
+        width: 40%;
+        margin-right: 5%;
+        float: left;
+    }
+
+    .specials-pricing {
+        margin-bottom: 5px;
+        float: left;
+        width: 17%;
+    }
+
+    .specials-pricing ul{  
+        list-style-type: none; 
+        margin-top: 0px; 
+        padding: 0px;
+        width: 100%;
+        float: left;
+    }
+
+    .price-row p{
+        width: 83%;
+    }
+    
+    .price-row ul{
+        width: 17%;
+        display: inline-block;
+        text-align: left;
+    }
+    
+    .price-row ul li{
+        width: 32%;
+        display: inline-block;
+        font-family: "Roboto-Medium", sans-serif;
+        font-size: 16px;
+        color:#676767;
+        text-align: center;
+        margin-left: -3px;
+    }
+}
+
+@media (max-width: 800px) {
+    .specials-items {
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
+
+    .specials-details {
+        margin-bottom: 5px;
+    }
+
+    .specials-pricing {
+        margin-bottom: 5px;
+        float: left;
+        width: 40%;
+    }
+
+    .specials-pricing ul{  
+        list-style-type: none; 
+        margin-top: 0px; 
+        padding: 0px;
+    }
+
+    .price-row p{
+        width: 54%;
+    }
+    
+    .price-row ul{
+        width: 46%;
+    }
+    
+    .price-row ul li{
+        width: 10%;
+        display: inline-block;
+        font-family: "Roboto-Medium", sans-serif;
+        font-size: 16px;
+        color:#676767;
+    }
+
+    .specials-pricing ul {
+        width: 100%;
+    }
+}
+
+.specials-pricing ul {
+    display: inline-block;
+}
+
+.specials-pricing ul li{  
+    width: 32%;
+    margin-left: -3px;
+    display: inline-block;
 }
 
 .price-row{
@@ -441,21 +722,7 @@ p4{
     margin-bottom: 5px;
 }
 
-.price-row p{
-    width: 54%;
-}
-
-.price-row ul{
-    width: 46%;
-}
-
-.price-row ul li{
-    width: 10%;
-    display: inline-block;
-    font-family: "Roboto-Medium", sans-serif;
-    font-size: 16px;
-    color:#676767;
-}
+/* Location */
 
 .sub-intro{
     font-family: Optima-Regular;
@@ -464,14 +731,30 @@ p4{
     letter-spacing: 0;
     text-align: center;
     width: 90%;
-    margin: auto;
-
+    margin: 10px auto;
+    max-width: 540px;
 }
 
-.location{
-    margin-top: 20px;
-    width: 100%;
-    float: left;
+@media (max-width: 800px) {
+    .location, .location-last {
+        margin-top: 20px;
+        width: 100%;
+        float: left;
+    }
+}
+
+@media (min-width: 801px) {
+    .location {
+        width: 32%;
+        float: left;
+        margin-top: 20px;
+        margin-right: 2%;
+    }
+    .location-last {
+        width: 32%;
+        margin-top: 20px;
+        float: left;
+    }
 }
 
 .intro p{
@@ -519,7 +802,7 @@ p4{
     font-size: 16px;
     color: #676767;
     letter-spacing: 0;
-    width: 50%;
+    width: 60%;
     text-align: left;
     float: left;
 }
@@ -530,7 +813,7 @@ p4{
     color: #676767;
     letter-spacing: 0;
     text-align: right;
-    width: 50%;
+    width: 40%;
     float: left;
 }
 
@@ -542,18 +825,29 @@ p4{
     margin-top: 20px;
     margin-bottom: 60px;
     float: left;
+    width: 100%;
 }
 
-.content-row{
+.plan-view img {
+    margin: 0 auto;
+}
+
+.content-row {
     margin-bottom: 12px;
     float: left;
 }
 
+.contact-row {
+    width: 100%;
+}
+
 .contact-detail{
-    width: 333px;
+    width: 100%;
     position: relative;
     float: left;
     margin-right: 50px;
+    max-width: 250px;
+    font-weight: bold;
 }
 
 .contact-info{
@@ -566,20 +860,26 @@ p4{
     max-width: 715px;
 }
 
+.follow-us-content{
+    max-width: 715px;
+}
+
 .sns-row{
     width: 100%;
     display: inline-block;
     margin-bottom: 10px;
+    vertical-align: bottom;
 }
 
 .facebookicon{
     width: 15%;
     float: left;
+    text-align: right;
     margin-right: 10px; 
 }
 
 .facebook-link{
-    width: 80%;
+    width: 70%;
     float: right;
     word-wrap: break-word;
 }
@@ -587,6 +887,7 @@ p4{
 .yelpicon{
     width: 15%;
     float: left;
+    text-align: right;
     margin-right: 10px; 
 }
 
@@ -596,8 +897,79 @@ p4{
     word-wrap: break-word;
 }
 
+.bg-for-reviews {
+    background-color: #FFFCF7;
+    width: 100%;
+    height: auto;
+}
 
+.reviews-content {
+    padding-bottom: 30px;
+}
+
+.comment-outer {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 20px auto;
+}
+
+.comment {
+    width: 87.5%;
+    margin: 0 auto;
+}
+
+.comment .timestamp {
+    width: 20%;
+    min-width: 100px;
+    float: left;
+    font-weight: bold;
+}
+
+.comment .recommendation {
+    width: 20%;
+    min-width: 100px;
+    float: left;
+    font-weight: bold;
+}
+
+@media (min-width: 801px) {
+    .comment .comment-box {
+        width: 60%;
+        min-width: 200px;
+        float: left;
+    }
+}
+
+@media (max-width: 800px) {
+    .comment .comment-box {
+        width: 100%;
+        min-width: 200px;
+        float: left;
+    }
+}
 
 .mustache-logo{
+    margin-top: 40px;
+    margin-bottom: 40px;
     display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+@media (max-width: 800px) {
+    .mustache-logo img {
+        width:30%;
+        height:30%;
+        margin: auto;
+    }
+}
+
+@media (min-width: 801px) {
+    .mustache-logo img {
+        width:15%;
+        height:15%;
+        margin: auto;
+    }
 }
