--- a/responsive-project/css/style.css
+++ b/responsive-project/css/style.css
@@ -81,6 +81,11 @@ a:hover{
         width: 14.2%;
         text-align: center;
         text-decoration: none;
+        font-family: "Unna-Bold";
+        font-size: 20px;
+        color: #8D8D8D;
+        letter-spacing: 0;
+        text-align: center;
     }
 }
 
